--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "autoprefixer": "^10.4.20",
     "next": "15.1.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tw-elements-react": "^1.0.0-alpha-end"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
